--- a/pages/about.mustache
+++ b/pages/about.mustache
@@ -14,6 +14,11 @@
 
 </head>
 <body>
+	<style media="screen">
+		#footer{
+			color: white;
+		}
+	</style>
 <div id="wrapper1">
 	<div id="header-wrapper">
 		<div id="header" class="container">
@@ -35,61 +40,52 @@
 	<div id="wrapper2">
 		<div id="welcome" class="container">
 			<div class="title">
-				<h2>Welcome to our website</h2>
-			</div>
-			<p>This is <strong>Embellished</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+				<h2>About the Project</h2>
+		</div>
+		<p>This is <strong>PoliApp</strong>, a website that targets college students to know about their legislature of their state. </p>
+
 		</div>
 	</div>
 	<div id="wrapper3">
 		<div id="portfolio" class="container">
 			<div class="title">
-				<h2>Vivamus fermentum nibh</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
-			<div class="column1">
-				<div class="box">
-					<span class="icon icon-wrench"></span>
-					<h3>Vestibulum venenatis</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
+				<h2> Why College Students? </h2>
 			</div>
-			<div class="column2">
-				<div class="box">
-					<span class="icon icon-trophy"></span>
-					<h3>Praesent scelerisque</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column3">
-				<div class="box">
-					<span class="icon icon-key"></span>
-					<h3>Donec dictum metus</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
-			<div class="column4">
-				<div class="box">
-					<span class="icon icon-lock"></span>
-					<h3>Mauris vulputate dolor</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
-			</div>
+			<p> The turnouts of the college was 48 percent, in 2016, which is not enough to see the change in the country and move towards American dream. Our goal is to increase turnout votes to 100 percent and this our step to inform the students about the politicans in their state. So, that college student will know about their politicians well enough to cast their vote in ambiguous manner.</p>
+  	</div>
+
 		</div>
+
+
 	</div>
 </div>
 <div id="footer" class="container">
 	<div class="title">
-		<h2>Get in touch</h2>
-		<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-	</ul>
-</div>
+		<div class="title">
+			<h2>Contacts about the creators</h2>
+		</div>
+		<ul class="contact">
+			<li>Name: Abishek Venkat
+				<li> Role: Main Developer</li>
+				<li> Email: avenkat@umd.edu</li>
+			</li>
+			<p />
+			<li>Name: David Saint Sauveur
+			<li>Role: Idea, Developer</li>
+			<li>Email: david57@umbc.edu</li>
+			</li>
+			<p />
+			<li>Name: Jaganathan Velraj
+			<li>Role: Developer </li>
+			<li> Email: hy17693@umbc.edu</li>
+			</li>
+
+		</ul>
+
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>A hack from hackUMBC 2018 | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Contact developers for any questions/requests</p>
+</div>
 </div>
 </body>
 </html>
