--- a/pages/home.mustache
+++ b/pages/home.mustache
@@ -35,61 +35,56 @@
 	<div id="wrapper2">
 		<div id="welcome" class="container">
 			<div class="title">
-				<h2>Welcome to our website</h2>
+				<h2>What the heck is a government?!</h2>
 			</div>
-			<p>This is <strong>Embellished</strong>, a free, fully standards-compliant CSS template designed by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>. The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p>
+			<p>If for someone reason you live in a hole and don't know what a government is, a government is the governing body of a nation, state, or community.
+				In the United States, we function as a democratic republic, where we elect representatives to voice our ideas on a higher level of organization. As
+				a result, it is important that each and every person eligable to vote do so in order to maximize our efficiency as a nation.
+			</p>
 		</div>
 	</div>
 	<div id="wrapper3">
 		<div id="portfolio" class="container">
 			<div class="title">
-				<h2>Vivamus fermentum nibh</h2>
-				<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span> </div>
+				<h2>Voting Registration</h2>
+				<span class="byline">A short list of tools and links</span> </div>
 			<div class="column1">
 				<div class="box">
-					<span class="icon icon-wrench"></span>
-					<h3>Vestibulum venenatis</h3>
-					<p>Fermentum nibh augue praesent a lacus at urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
+					<span class="icon icon-user"></span>
+					<h3>Register</h3>
+					<p>Sign up and register to officially vote</p>
+					<a href="https://www.usa.gov/register-to-vote#item-212645" class="button button-small">Register</a> </div>
 			</div>
 			<div class="column2">
 				<div class="box">
-					<span class="icon icon-trophy"></span>
-					<h3>Praesent scelerisque</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
+					<span class="icon icon-lock"></span>
+					<h3>Requirements</h3>
+					<p>Information about who can and can't vote</p>
+					<a href="https://www.usa.gov/register-to-vote#item-212447" class="button button-small">Requirements</a> </div>
 			</div>
 			<div class="column3">
 				<div class="box">
-					<span class="icon icon-key"></span>
-					<h3>Donec dictum metus</h3>
-					<p>Vivamus fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
+					<span class="icon icon-calendar"></span>
+					<h3>Deadlines</h3>
+					<p>Dates and Deadlines for certain voting activities</p>
+					<a href="#" class="button button-small">Deadlines</a> </div>
 			</div>
 			<div class="column4">
 				<div class="box">
-					<span class="icon icon-lock"></span>
-					<h3>Mauris vulputate dolor</h3>
-					<p>Rutrum fermentum nibh in augue praesent urna congue rutrum.</p>
-					<a href="#" class="button button-small">Etiam posuere</a> </div>
+					<span class="icon icon-pencil"></span>
+					<h3>Change Registration</h3>
+					<p>Edit the details of your voter registration</p>
+					<a href="https://www.usa.gov/register-to-vote#item-212825" class="button button-small">Change</a> </div>
 			</div>
 		</div>
 	</div>
 </div>
 <div id="footer" class="container">
-	<div class="title">
-		<h2>Get in touch</h2>
-		<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-	</ul>
-</div>
+
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>A hack from hackUMBC 2018 | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Contact developers for any questions/requests</p>
+</div>
 </div>
 </body>
 </html>
