--- a/pages/people.mustache
+++ b/pages/people.mustache
@@ -144,19 +144,11 @@ border: 1px solid #6C2A6A;
 	</div>
 </div>
 <div id="footer" class="container">
-	<div class="title">
-		<h2>Get in touch</h2>
-		<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-	</ul>
-</div>
+
 <div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>A hack from hackUMBC 2018 | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	<p>Contact developers for any questions/requests</p>
+</div>
 </div>
 
 </body>
