--- a/pages/register.mustache
+++ b/pages/register.mustache
@@ -1,21 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>PoliApp - Registration</title>
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-<link href="/default.css" rel="stylesheet" type="text/css" media="all" />
-<link href="/fonts.css" rel="stylesheet" type="text/css" media="all" />
 
-<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>PoliApp - Registration</title>
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
+	<meta name="viewport" content="initial-scale=1.0,
+      width=device-width" />
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js"
+      type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js"
+      type="text/javascript" charset="utf-8"></script>
+    <script src="http://js.api.here.com/v3/3.0/mapsjs-ui.js"
+      type="text/javascript" charset="utf-8"></script>
+    <link rel="stylesheet" type="text/css"
+      href="http://js.api.here.com/v3/3.0/mapsjs-ui.css" />
+			<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+	<link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
+	<link href="/default.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/fonts.css" rel="stylesheet" type="text/css" media="all" />
+
+	<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
+
 <body>
 	<style media="screen">
-	#portfolio{
+		#portfolio{
 		text-align:center;
 	}
 	.search {
@@ -99,167 +112,215 @@
 	margin-top: 40px;
 	border: 1px solid #6C2A6A;
 	}
+	#mapContainer{
+		margin: 0 auto;
+	}
 	</style>
-<div id="wrapper1">
-	<div id="header-wrapper">
-		<div id="header" class="container">
-			<div id="logo"> <span class="icon icon-globe"></span>
-				<h1><a href="/">Registration</a></h1>
-				<span>hackUMBC 2018 </div>
-			<div id="menu">
-				<ul>
-					<li><a href="/" accesskey="1" title="">Homepage</a></li>
-					<li><a href="/about" accesskey="2" title=""> About</a></li>
-					<li ><a href="/people" accesskey="3" title="">People</a></li>
-					<li ><a href="/bills" accesskey="4" title="">Bills </a></li>
-					<li ><a href="/events" accesskey="5" title="">Recent Events</a></li>
-					<li class="current_page_item"><a href="/register" accesskey="6" title="">Registration </a></li>
-				</ul>
+	<div id="wrapper1">
+		<div id="header-wrapper">
+			<div id="header" class="container">
+				<div id="logo"> <span class="icon icon-globe"></span>
+					<h1><a href="/">Registration</a></h1>
+					<span>hackUMBC 2018
+				</div>
+				<div id="menu">
+					<ul>
+						<li><a href="/" accesskey="1" title="">Homepage</a></li>
+						<li><a href="/about" accesskey="2" title=""> About</a></li>
+						<li><a href="/people" accesskey="3" title="">People</a></li>
+						<li><a href="/bills" accesskey="4" title="">Bills </a></li>
+						<li><a href="/events" accesskey="5" title="">Recent Events</a></li>
+						<li class="current_page_item"><a href="/register" accesskey="6" title="">Registration </a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div id="wrapper2">
-		<div id="welcome" class="container">
-			<div class="title">
-				<h2>Register to vote</h2>
+		<div id="wrapper2">
+			<div id="welcome" class="container">
+				<div class="title">
+					<h2>Register to vote</h2>
+				</div>
+				<p>This page is dedicated to educating you on how to vote, participate in polls, and other activities...</p>
 			</div>
-			<p>This page is dedicated to educating you on how to vote, participate in polls, and other activities...</p>
 		</div>
-	</div>
-	<div id="wrapper3">
-		<div id="portfolio" class="container">
-			<div class="title">
-				<h2>Voting Locations Near You</h2>
-				<span class="byline">(places to vote based on local location)</span> </div>
-                <div style="display: flex; justify-content: center;">
-									<button onclick="geoFindMe()">Show my location</button></div>
-								<br />
-									<form method="post" action="/register/search" style="margin-bottom: 20px;">
-										<input class="search" id="search" type="text" name="location" placeholder="Search for ...">
-										<button type="submit">Search</button>
-									</form>
-									<div id="out">
-										{{#show}}
-										<h2>Polling Locations</h2>
-										{{/show}}
-										{{#pollingLocations}}
-										<div class="card">
-											<h1>{{address.locationName}}</h1>
-											<div style="display: inline-flex; margin-top: 22px;">
-											<span style="margin-right: 25px;"><b>Zip:</b> {{address.zip}}</span>
-											<span><b>State:</b> {{address.state}}</span>
-										</div>
-										<br />
-										<p style="margin-top: 20px;">
-									Address: {{address.line1}}
-									</p>
-									<p style="margin-top: 20px;">
-										<b>Hours:</b> {{pollingHours}}
-									</p>
-										</div>
-										{{/pollingLocations}}
-										{{#show}}
-										<h2 style="margin-top: 40px;">Early Voting Sites</h2>
-										{{/show}}
-										{{#earlyVoteSites}}
-										<div class="card">
-											<h1>{{address.locationName}}</h1>
-											<div style="display: inline-flex; margin-top: 22px;">
-											<span style="margin-right: 25px;"><b>Zip:</b> {{address.zip}}</span>
-											<span><b>State:</b> {{address.state}}</span>
-										</div>
-										<br />
-										<p style="margin-top: 20px;">
-									Address: {{address.line1}}
-									</p>
-									<p style="margin-top: 20px;">
-										<b>Hours:</b> {{pollingHours}}
-									</p>
-										</div>
-										{{/earlyVoteSites}}
-										{{#show}}
-										<h2 style="margin-top: 40px;">Contests</h2>
-										{{/show}}
-										{{#contests}}
-										<div class="contestcard">
-											<h1>{{type}}</h1>
-											<div style="display: inline-flex; margin-top: 22px;">
-												{{#hasOffice}}
-											<span style="margin-right: 25px;"><b>Office:</b> {{office}}</span>
-											{{/hasOffice}}
-											<span style="margin-right: 25px;"><b>District:</b> {{district.name}}</span>
-										</div>
-										<br />
-										{{#showText}}
-										<p>{{referendumText}}</p>
-										{{/showText}}
-							
-										{{#candidates}}
-										<div style="display: inline-flex; margin-top: 22px;">
-										<span style="margin-right: 25px;"><b>Name:</b> {{name}}</span>
-										<span style="margin-right: 25px;"><b>Party:</b> {{party}}</span>
-									</div>
-									<div style="display: inline-flex; margin-top: 22px;">
+		<div id="wrapper3">
+			<div id="portfolio" class="container">
+				<div class="title">
+					<h2>Voting Locations Near You</h2>
+					<span class="byline">(places to vote based on local location)</span>
+				</div>
+				<div style="display: flex; justify-content: center;">
+					<button onclick="geoFindMe()">Show my location</button></div>
+				<div id="mapContainer">
+
+				</div>
+				<br />
+				<form method="post" action="/register/search" style="margin-bottom: 20px;">
+					<input class="search" id="search" type="text" name="location" placeholder="Search for ...">
+					<button type="submit">Search</button>
+				</form>
+				<div id="out">
+					{{#show}}
+						<h2>Polling Locations</h2>
+					{{/show}}
+					{{#pollingLocations}}
+						<div class="card">
+							<h1>{{address.locationName}}</h1>
+							<div style="display: inline-flex; margin-top: 22px;">
+								<span style="margin-right: 25px;"><b>Zip:</b> {{address.zip}}</span>
+								<span><b>State:</b> {{address.state}}</span>
+							</div>
+							<br />
+							<p style="margin-top: 20px;">
+								Address: {{address.line1}}
+							</p>
+							<p style="margin-top: 20px;">
+								<b>Hours:</b> {{pollingHours}}
+							</p>
+						</div>
+					{{/pollingLocations}}
+					{{#show}}
+						<h2 style="margin-top: 40px;">Early Voting Sites</h2>
+					{{/show}}
+					{{#earlyVoteSites}}
+						<div class="card">
+							<h1>{{address.locationName}}</h1>
+							<div style="display: inline-flex; margin-top: 22px;">
+								<span style="margin-right: 25px;"><b>Zip:</b> {{address.zip}}</span>
+								<span><b>State:</b> {{address.state}}</span>
+							</div>
+							<br />
+							<p style="margin-top: 20px;">
+								Address: {{address.line1}}
+							</p>
+							<p style="margin-top: 20px;">
+								<b>Hours:</b> {{pollingHours}}
+							</p>
+						</div>
+					{{/earlyVoteSites}}
+					{{#show}}
+						<h2 style="margin-top: 40px;">Contests</h2>
+					{{/show}}
+					{{#contests}}
+						<div class="contestcard">
+							<h1>{{type}}</h1>
+							<div style="display: inline-flex; margin-top: 22px;">
+								{{#hasOffice}}
+									<span style="margin-right: 25px;"><b>Office:</b> {{office}}</span>
+								{{/hasOffice}}
+								<span style="margin-right: 25px;"><b>District:</b> {{district.name}}</span>
+							</div>
+							<br />
+							{{#showText}}
+								<p>{{referendumText}}</p>
+							{{/showText}}
+
+							{{#candidates}}
+								<div style="display: inline-flex; margin-top: 22px;">
+									<span style="margin-right: 25px;"><b>Name:</b> {{name}}</span>
+									<span style="margin-right: 25px;"><b>Party:</b> {{party}}</span>
+								</div>
+								<div style="display: inline-flex; margin-top: 22px;">
 									<span style="margin-right: 25px;">Email: {{email}}</span>
 									<span style="margin-right: 25px;">Phone: {{phone}}</span>
 								</div>
-										{{/candidates}}
-										</div>
-										{{/contests}}
-									</div>
+							{{/candidates}}
+						</div>
+					{{/contests}}
+				</div>
 
+			</div>
 		</div>
 	</div>
-</div>
-<div id="footer" class="container">
-	<div class="title">
-		<h2>Get in touch</h2>
-		<span class="byline">Phasellus nec erat sit amet nibh pellentesque congue</span> </div>
-	<ul class="contact">
-		<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
-		<li><a href="#" class="icon icon-facebook"><span></span></a></li>
-		<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
-		<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
-		<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
-	</ul>
-</div>
-<div id="copyright" class="container">
-	<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
-</div>
-<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript">
-	function geoFindMe(){
-		loc={
-    latitude:'',
-    longitude:''
-};
+	<div id="footer" class="container">
 
-    if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(function(position){
-					loc.latitude=position.coords.latitude;
-    loc.longitude=position.coords.longitude;
+	<div id="copyright" class="container">
+		<p>A hack from hackUMBC 2018 | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+		<p>Contact developers for any questions/requests</p>
+	</div>
+	</div>
+	<div id="copyright" class="container">
+		<p>&copy; Untitled. All rights reserved. | Photos by <a href="http://fotogrph.com/">Fotogrph</a> | Design by <a href="http://templated.co" rel="nofollow">TEMPLATED</a>.</p>
+	</div>
+	<script type="text/javascript">
+		var platform = new H.service.Platform({
+			'app_id': 'iMGor9ha19qZ5SGBAWhq',
+			'app_code': 'AqW_Lw5D6tx15GR_Xtubmw'
+		});
+		// Retrieve the target element for the map:
+		var targetElement = document.getElementById('mapContainer');
 
-		var geocoder = new google.maps.Geocoder();
-    var latLng = new google.maps.LatLng(loc.latitude, loc.longitude);
+		// Get default map types from the platform object:
+		var defaultLayers = platform.createDefaultLayers();
 
- if (geocoder) {
-    geocoder.geocode({ 'latLng': latLng}, function (results, status) {
-       if (status == google.maps.GeocoderStatus.OK) {
-         var search = document.getElementById("search")
-				 console.log(results)
-				 search.value = results[1].formatted_address
-       }
-       else {
-        console.log("Geocoding failed: " + status);
-       }
-    });
-  }
-				});
-    } else {
-        console.log("Not supported")
-    }
+		function geoFindMe(){
+			targetElement.style.width = "800px";
+			targetElement.style.height = "400px"
 
-	}
-</script>
+			if (navigator.geolocation) {
+				var loc = {
+					latitude: 38.9,
+					longitude: 77
+				};
+				navigator.geolocation.getCurrentPosition(function(position) {
+							loc.latitude = position.coords.latitude;
+							loc.longitude = position.coords.longitude;
+							var map = new H.Map(
+								document.getElementById('mapContainer'),
+								defaultLayers.normal.map, {
+									zoom: 10,
+									center: {
+										lat: loc.latitude,
+										lng: loc.longitude
+									}
+								});
+								var behavior = new H.mapevents.Behavior(new H.mapevents.MapEvents(map));
+								var ui = H.ui.UI.createDefault(map, defaultLayers);
+							// Create the parameters for the reverse geocoding request:
+							var reverseGeocodingParameters = {
+								prox: loc.latitude + "," + loc.longitude,
+								mode: 'retrieveAddresses',
+								maxresults: 1
+							};
+
+							// Define a callback function to process the response:
+							function onSuccess(result) {
+								var location = result.Response.View[0].Result[0];
+
+								// Create an InfoBubble at the returned location with
+								// the address as its contents:
+								var address = location.Location.Address.Label;
+
+								var bubble = new H.ui.InfoBubble({ lng: loc.longitude, lat: loc.latitude }, {
+        content: address
+       });
+
+// Add info bubble to the UI:
+ui.addBubble(bubble);
+								document.getElementById("search").value = address;
+							};
+
+							// Get an instance of the geocoding service:
+							var geocoder = platform.getGeocodingService();
+
+							// Call the geocode method with the geocoding parameters,
+							// the callback and an error callback function (called if a
+							// communication error occurs):
+							geocoder.reverseGeocode(
+								reverseGeocodingParameters,
+								onSuccess,
+								function(e) {
+									alert(e);
+								});
+
+						})
+						// Instantiate the map:
+						}else{
+							console.log("not supported")
+						}
+		}
+
+	</script>
 </body>
+
 </html>
